--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 DB_URL = "mongodb+srv://"
-DOTENV_WORKS = "onlie to test this page working!"
+DOTENV_WORKS = "online to test BankApp working!"
 JWT_TOKEN = ""
 JWT_TOKEN_NOTES = ""
