--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,18 @@ dist
 
 # TernJS port file
 .tern-port
+
+
+# unit test java ignore part
+
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+# https://github.com/takari/maven-wrapper#usage-without-binary-jar
+.mvn/wrapper/maven-wrapper.jar
